--- a/hdf5.ipynb
+++ b/hdf5.ipynb
@@ -244,13 +244,86 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done: 2024-11-10 12:11:58.047559\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "import csv\n",
+    "\n",
+    "with open(\"float_32_tester.csv\",\"w\",newline='') as out_file:\n",
+    "    writer = csv.writer(out_file)\n",
+    "    for i in range(10):\n",
+    "        for j in range(10):\n",
+    "            for k in range(10):\n",
+    "                to_write = np.float32(3.1415926535897932384626433832795028841971693993)\n",
+    "                data = [to_write]*10\n",
+    "                writer.writerow(data)\n",
+    "with open(\"float_64_tester.csv\",\"w\",newline='') as out_file:\n",
+    "    writer = csv.writer(out_file)\n",
+    "    for i in range(10):\n",
+    "        for j in range(10):\n",
+    "            for k in range(10):\n",
+    "                to_write = np.float64(3.1415926535897932384626433832795028841971693993)\n",
+    "                data = [to_write]*10\n",
+    "                writer.writerow(data)\n",
+    "print(\"done:\",datetime.now())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done: 2024-11-10 12:27:24.028052\n"
+     ]
+    }
+   ],
+   "source": [
+    "import h5py\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "filename = 'data1.h5'\n",
+    "to_write = np.float32(3.1415926535897932384626433832795028841971693993)\n",
+    "data = np.array([to_write]*10)\n",
+    "with h5py.File(filename, 'w') as f:\n",
+    "    # Check if dataset exists, if not create one\n",
+    "    if 'my_dataset' not in f:\n",
+    "        # Create a dataset with an initial size, here 0 elements\n",
+    "        dset = f.create_dataset('my_dataset', (0,), maxshape=(None,), dtype='i')\n",
+    "    else:\n",
+    "        # Get the existing dataset\n",
+    "        dset = f['my_dataset']\n",
+    "    \n",
+    "    # Write data multiple times (e.g., 5 times)\n",
+    "    for i in range(1000):\n",
+    "        # Append data by resizing the dataset\n",
+    "        dset.resize(dset.shape[0] + data.shape[0], axis=0)\n",
+    "        dset[-data.shape[0]:] = data\n",
+    "with open(\"float_32_tester.csv\",\"w\",newline='') as out_file:\n",
+    "    writer = csv.writer(out_file)\n",
+    "    for i in range(1000):\n",
+    "        to_write = np.float32(3.1415926535897932384626433832795028841971693993)\n",
+    "        data = [to_write]*10\n",
+    "        writer.writerow(data)\n",
+    "print(\"done:\",datetime.now())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
